@@ -83,3 +83,6 @@ Gopala Krishna A <krishna.ggk@gmail.com> for the implementation of the
 	help application.
 
 Marek Straka <marek@straka.info> for the Czech translations.
+
+Antoni Subirats <antoni.subirats@gmail.com> for the Catalan
+	 translations.
